--- a/MovieRentalAppMVC/MovieRentalAppMVC.csproj
+++ b/MovieRentalAppMVC/MovieRentalAppMVC.csproj
@@ -181,10 +181,32 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201908271639094_InitialModel.cs" />
+    <Compile Include="Migrations\201908271639094_InitialModel.Designer.cs">
+      <DependentUpon>201908271639094_InitialModel.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201908280756194_AddIsSubscribedToCustomer.cs" />
+    <Compile Include="Migrations\201908280756194_AddIsSubscribedToCustomer.Designer.cs">
+      <DependentUpon>201908280756194_AddIsSubscribedToCustomer.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201908280807541_AddMembershipType.cs" />
+    <Compile Include="Migrations\201908280807541_AddMembershipType.Designer.cs">
+      <DependentUpon>201908280807541_AddMembershipType.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201908280817274_PopulateMembershipTypes.cs" />
+    <Compile Include="Migrations\201908280817274_PopulateMembershipTypes.Designer.cs">
+      <DependentUpon>201908280817274_PopulateMembershipTypes.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201908280833305_ApplyAnnotationsToCustomerName.cs" />
+    <Compile Include="Migrations\201908280833305_ApplyAnnotationsToCustomerName.Designer.cs">
+      <DependentUpon>201908280833305_ApplyAnnotationsToCustomerName.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\Customer.cs" />
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
+    <Compile Include="Models\MembershipType.cs" />
     <Compile Include="Models\Movie.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
@@ -269,6 +291,23 @@
     <None Include="packages.config" />
     <Content Include="Scripts\jquery-3.3.1.slim.min.map" />
     <Content Include="Scripts\jquery-3.3.1.min.map" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Migrations\201908271639094_InitialModel.resx">
+      <DependentUpon>201908271639094_InitialModel.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201908280756194_AddIsSubscribedToCustomer.resx">
+      <DependentUpon>201908280756194_AddIsSubscribedToCustomer.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201908280807541_AddMembershipType.resx">
+      <DependentUpon>201908280807541_AddMembershipType.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201908280817274_PopulateMembershipTypes.resx">
+      <DependentUpon>201908280817274_PopulateMembershipTypes.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201908280833305_ApplyAnnotationsToCustomerName.resx">
+      <DependentUpon>201908280833305_ApplyAnnotationsToCustomerName.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
