Display customer's birthdate on their profile page

--- a/MovieRentalAppMVC/MovieRentalAppMVC.csproj
+++ b/MovieRentalAppMVC/MovieRentalAppMVC.csproj
@@ -209,6 +209,10 @@
     <Compile Include="Migrations\201908280930178_PopulateNameInMembershipType.Designer.cs">
       <DependentUpon>201908280930178_PopulateNameInMembershipType.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201908281443012_AddBirthDateToCustomer.cs" />
+    <Compile Include="Migrations\201908281443012_AddBirthDateToCustomer.Designer.cs">
+      <DependentUpon>201908281443012_AddBirthDateToCustomer.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\Customer.cs" />
@@ -321,6 +325,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201908280930178_PopulateNameInMembershipType.resx">
       <DependentUpon>201908280930178_PopulateNameInMembershipType.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201908281443012_AddBirthDateToCustomer.resx">
+      <DependentUpon>201908281443012_AddBirthDateToCustomer.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
