--- a/MovieRentalAppMVC/MovieRentalAppMVC.csproj
+++ b/MovieRentalAppMVC/MovieRentalAppMVC.csproj
@@ -213,9 +213,22 @@
     <Compile Include="Migrations\201908281443012_AddBirthDateToCustomer.Designer.cs">
       <DependentUpon>201908281443012_AddBirthDateToCustomer.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201908281941557_AddDateAndNumberInStockForMovie.cs" />
+    <Compile Include="Migrations\201908281941557_AddDateAndNumberInStockForMovie.Designer.cs">
+      <DependentUpon>201908281941557_AddDateAndNumberInStockForMovie.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201908282013366_AddGenre.cs" />
+    <Compile Include="Migrations\201908282013366_AddGenre.Designer.cs">
+      <DependentUpon>201908282013366_AddGenre.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201908282019003_PopulateGenres.cs" />
+    <Compile Include="Migrations\201908282019003_PopulateGenres.Designer.cs">
+      <DependentUpon>201908282019003_PopulateGenres.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\Customer.cs" />
+    <Compile Include="Models\Genre.cs" />
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
     <Compile Include="Models\MembershipType.cs" />
@@ -328,6 +341,15 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201908281443012_AddBirthDateToCustomer.resx">
       <DependentUpon>201908281443012_AddBirthDateToCustomer.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201908281941557_AddDateAndNumberInStockForMovie.resx">
+      <DependentUpon>201908281941557_AddDateAndNumberInStockForMovie.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201908282013366_AddGenre.resx">
+      <DependentUpon>201908282013366_AddGenre.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201908282019003_PopulateGenres.resx">
+      <DependentUpon>201908282019003_PopulateGenres.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
