--- a/MovieRentalAppMVC/MovieRentalAppMVC.csproj
+++ b/MovieRentalAppMVC/MovieRentalAppMVC.csproj
@@ -244,6 +244,10 @@
     <Compile Include="Migrations\201908282019003_PopulateGenres.Designer.cs">
       <DependentUpon>201908282019003_PopulateGenres.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201909141739514_SeedUsers.cs" />
+    <Compile Include="Migrations\201909141739514_SeedUsers.Designer.cs">
+      <DependentUpon>201909141739514_SeedUsers.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\Customer.cs" />
@@ -551,6 +555,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201908282019003_PopulateGenres.resx">
       <DependentUpon>201908282019003_PopulateGenres.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201909141739514_SeedUsers.resx">
+      <DependentUpon>201909141739514_SeedUsers.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
