NewRental Feature: add Rental Class and Rental DbSet in ApplicationDbContext

--- a/MovieRentalAppMVC/MovieRentalAppMVC.csproj
+++ b/MovieRentalAppMVC/MovieRentalAppMVC.csproj
@@ -280,6 +280,14 @@
     <Compile Include="Migrations\201909171928123_AddPhoneToApplicationUser1.Designer.cs">
       <DependentUpon>201909171928123_AddPhoneToApplicationUser1.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201909181755096_AddRentalToDomainClasses.cs" />
+    <Compile Include="Migrations\201909181755096_AddRentalToDomainClasses.Designer.cs">
+      <DependentUpon>201909181755096_AddRentalToDomainClasses.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201909181757380_correctedPropertyNameInRentalClass.cs" />
+    <Compile Include="Migrations\201909181757380_correctedPropertyNameInRentalClass.Designer.cs">
+      <DependentUpon>201909181757380_correctedPropertyNameInRentalClass.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\Customer.cs" />
@@ -289,6 +297,7 @@
     <Compile Include="Models\MembershipType.cs" />
     <Compile Include="Models\Min18YearsIfAMember.cs" />
     <Compile Include="Models\Movie.cs" />
+    <Compile Include="Models\Rental.cs" />
     <Compile Include="Models\RoleName.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
@@ -604,6 +613,12 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201909171928123_AddPhoneToApplicationUser1.resx">
       <DependentUpon>201909171928123_AddPhoneToApplicationUser1.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201909181755096_AddRentalToDomainClasses.resx">
+      <DependentUpon>201909181755096_AddRentalToDomainClasses.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201909181757380_correctedPropertyNameInRentalClass.resx">
+      <DependentUpon>201909181757380_correctedPropertyNameInRentalClass.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
